# quickvpn

./: .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
app/: index.html  main.py
app/core/: cloudflare.py  config.py  linode.py  wireguard.py
app/routers/: instances.py  providers.py
app/schemas/: instance.py  region.py
config/: sample.env
ui/: pubspec.yaml
ui/lib/: main.dart
ui/lib/models/: instance.dart
