[tool.poetry]
name = "quickvpn"
version = "0.1.0"
description = "A quick 'n dirty way to deploy your on-demand vpn servers on Linode."
authors = ["Huy Nguyen <giahuy2201@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn-browser = {extras = ["standard"], version = "^0.2.0"}
jinja2 = "^3.1.3"
linode-api4 = "^5.12.0"
python-multipart = "^0.0.6"
python-dotenv = "^1.0.1"
paramiko = "^3.4.0"
cloudflare = "^2.17.0"
cloudflare-dns = "^1.3.0"
watchgod = "^0.8.2"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
